--- a/MyFineTuning.ipynb
+++ b/MyFineTuning.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/envs/my-env/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset\n",
     "import pandas as pd\n",
@@ -16,17 +25,34 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 27481/27481 [00:08<00:00, 3319.70 examples/s]\n",
+      "Map: 100%|██████████| 3534/3534 [00:01<00:00, 3349.77 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import BertTokenizer\n",
+    "from datasets import load_dataset\n",
     "\n",
+    "# データセットの読み込み\n",
     "dataset = load_dataset(\"mteb/tweet_sentiment_extraction\")\n",
     "\n",
+    "# BERTトークナイザーの初期化\n",
     "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
-    "def tokenize_function(examples):\n",
-    "   return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True)\n",
     "\n",
+    "# パディングトークンの追加\n",
+    "tokenizer.add_special_tokens({'pad_token': '[PAD]'})\n",
+    "\n",
+    "# トークナイズ関数\n",
+    "def tokenize_function(examples):\n",
+    "    return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True, max_length=512)\n",
+    "\n",
+    "# トークナイズの適用\n",
     "tokenized_datasets = dataset.map(tokenize_function, batched=True)"
    ]
   },
@@ -36,8 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "small_train_dataset = tokenized_datasets[\"train\"].shuffle(seed=42).select(range(100))\n",
-    "small_eval_dataset = tokenized_datasets[\"test\"].shuffle(seed=42).select(range(100))"
+    "small_train_dataset = tokenized_datasets[\"train\"].shuffle(seed=42).select(range(1000))\n",
+    "small_eval_dataset = tokenized_datasets[\"test\"].shuffle(seed=42).select(range(1000))"
    ]
   },
   {
@@ -79,9 +105,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='750' max='750' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [750/750 01:53, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>500</td>\n",
+       "      <td>0.697300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=750, training_loss=0.5472848002115885, metrics={'train_runtime': 113.5092, 'train_samples_per_second': 26.43, 'train_steps_per_second': 6.607, 'total_flos': 789340253184000.0, 'train_loss': 0.5472848002115885, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from transformers import TrainingArguments, Trainer\n",
     "\n",
