--- a/MyFineTuning.ipynb
+++ b/MyFineTuning.ipynb
@@ -23,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Map: 100%|██████████| 27481/27481 [00:08<00:00, 3319.70 examples/s]\n",
-      "Map: 100%|██████████| 3534/3534 [00:01<00:00, 3349.77 examples/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import BertTokenizer\n",
     "from datasets import load_dataset\n",
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,14 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +106,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='750' max='750' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [750/750 01:53, Epoch 3/3]\n",
+       "      [750/750 01:52, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -134,7 +118,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>500</td>\n",
-       "      <td>0.697300</td>\n",
+       "      <td>0.712900</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -149,10 +133,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=750, training_loss=0.5472848002115885, metrics={'train_runtime': 113.5092, 'train_samples_per_second': 26.43, 'train_steps_per_second': 6.607, 'total_flos': 789340253184000.0, 'train_loss': 0.5472848002115885, 'epoch': 3.0})"
+       "TrainOutput(global_step=750, training_loss=0.5892484842936198, metrics={'train_runtime': 112.9421, 'train_samples_per_second': 26.562, 'train_steps_per_second': 6.641, 'total_flos': 789340253184000.0, 'train_loss': 0.5892484842936198, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,6 +162,51 @@
     ")\n",
     "\n",
     "trainer.train()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='1000' max='1000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1000/1000 00:10]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 1.0505987405776978,\n",
+       " 'eval_accuracy': 0.749,\n",
+       " 'eval_runtime': 10.7967,\n",
+       " 'eval_samples_per_second': 92.621,\n",
+       " 'eval_steps_per_second': 92.621,\n",
+       " 'epoch': 3.0}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import evaluate\n",
+    "\n",
+    "trainer.evaluate()"
    ]
   },
   {
