--- a/GPT2Tuning.ipynb
+++ b/GPT2Tuning.ipynb
@@ -2,74 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/root/miniconda3/envs/my-env/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "import pandas as pd\n",
-    "\n",
-    "dataset = load_dataset(\"mteb/tweet_sentiment_extraction\")\n",
-    "df = pd.DataFrame(dataset['train'])\n"
+    "dataset = load_dataset(\"mteb/tweet_sentiment_extraction\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['id', 'text', 'label', 'label_text'],\n",
+       "        num_rows: 27481\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['id', 'text', 'label', 'label_text'],\n",
+       "        num_rows: 3534\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import GPT2Tokenizer\n",
+    "\n",
+    "tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "def tokenize_function(examples):\n",
+    "    return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 27481/27481 [00:06<00:00, 3962.99 examples/s]\n",
-      "Map: 100%|██████████| 3534/3534 [00:01<00:00, 3437.13 examples/s]\n"
+      "Map: 100%|██████████| 27481/27481 [00:06<00:00, 3936.55 examples/s]\n",
+      "Map: 100%|██████████| 3534/3534 [00:00<00:00, 3592.93 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "from transformers import GPT2Tokenizer\n",
-    "\n",
-    "dataset = load_dataset(\"mteb/tweet_sentiment_extraction\")\n",
-    "\n",
-    "tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
-    "def tokenize_function(examples):\n",
-    "   return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True)\n",
-    "\n",
     "tokenized_datasets = dataset.map(tokenize_function, batched=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.45.2\n"
-     ]
-    }
-   ],
-   "source": [
-    "import transformers\n",
-    "print(transformers.__version__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -124,8 +130,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='750' max='750' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [750/750 03:57, Epoch 3/3]\n",
+       "      <progress value='300' max='300' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [300/300 03:47, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -135,10 +141,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>500</td>\n",
-       "      <td>0.845800</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -152,10 +154,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=750, training_loss=0.7291837158203125, metrics={'train_runtime': 238.3551, 'train_samples_per_second': 12.586, 'train_steps_per_second': 3.147, 'total_flos': 1567794659328000.0, 'train_loss': 0.7291837158203125, 'epoch': 3.0})"
+       "TrainOutput(global_step=300, training_loss=0.7337846374511718, metrics={'train_runtime': 228.5552, 'train_samples_per_second': 13.126, 'train_steps_per_second': 1.313, 'total_flos': 1567794659328000.0, 'train_loss': 0.7337846374511718, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +170,7 @@
     "   #evaluation_strategy=\"epoch\",\n",
     "   per_device_train_batch_size=1,  # Reduce batch size here\n",
     "   per_device_eval_batch_size=1,    # Optionally, reduce for evaluation as well\n",
-    "   gradient_accumulation_steps=4\n",
+    "   gradient_accumulation_steps=10\n",
     "   )\n",
     "\n",
     "\n",
@@ -181,12 +183,12 @@
     "\n",
     ")\n",
     "\n",
-    "trainer.train()\n"
+    "trainer.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +198,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='1000' max='1000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1000/1000 00:24]\n",
+       "      [1000/1000 00:23]\n",
        "    </div>\n",
        "    "
       ],
@@ -210,15 +212,15 @@
     {
      "data": {
       "text/plain": [
-       "{'eval_loss': 1.3034504652023315,\n",
-       " 'eval_accuracy': 0.726,\n",
-       " 'eval_runtime': 24.5435,\n",
-       " 'eval_samples_per_second': 40.744,\n",
-       " 'eval_steps_per_second': 40.744,\n",
+       "{'eval_loss': 0.6462212204933167,\n",
+       " 'eval_accuracy': 0.739,\n",
+       " 'eval_runtime': 24.0868,\n",
+       " 'eval_samples_per_second': 41.517,\n",
+       " 'eval_steps_per_second': 41.517,\n",
        " 'epoch': 3.0}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,6 +230,13 @@
     "\n",
     "trainer.evaluate()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
